<resources>
    <string name="app_name">说走就走</string>

    <string name="main_fragment_log">旅行足迹</string>
    <string name="main_fragment_img">美图美景</string>

    <!-- for design place -->
    <string name="design_text_view_price">65元/人</string>
    <string name="design_text_view_open_time_label">开放时间 : </string>
    <string name="design_text_view_open_time">7:00 - 8:00</string>
    <string name="design_text_view_name">溜溜弯</string>
    <string name="design_text_view_summary">好好玩哦</string>
    <string name="design_text_view_address">黑背生和谐是</string>

    <string name="design_text_view_discount">暂无其他优惠，详见景区公告。</string>
    <string name="design_text_view_attention">预订门票包含漂流(约3小时)、淋浴。另付费项目：保险、景区内
        小交通等。\r\n ②漂流为水上户外项目，受天气等不可抗力因素影响较大，建议您出行前查看当地天气预报。
    </string>
    <string name="design_text_view_content">热高乐园冰雪欢乐世界位于沈抚交界处，巴厘岛水世界西侧。主要
        以戏雪、滑冰为主，滑雪为辅。总规划面积10万平方米，包括单板滑雪、双板滑雪、溜冰、全地形越野车、雪
        地摩托车、雪上飞碟、冰滑梯、雪地冲锋舟、冰上碰碰车等20多项娱乐运动。并大胆利用友爱河自然形成的冰
        面做文章，创新打造天然滑冰场，令游客充分感受速度滑冰、花样滑冰的乐趣，形成真正的集冰雪于一身的欢
        乐天地。 沈阳热高乐园冰雪欢乐世界 沈阳热高乐园冰雪欢乐世界雪场四周纵览6万平原生态林海，这些层林
        将被进行人工喷雾，在整个冬季形成美丽的雾凇带，这是东三省内所有滑雪场所不具备的。 沈阳热高乐园冰
        雪欢乐世界 沈阳热高乐园冰雪欢乐世界雪场引进了国际先进拖引设备魔毯，让初级滑雪爱好者在保证安全、
        便捷的情况下，充分体验滑雪的魅力；也专门为孩子们设计了儿童戏雪区，使孩子在冰雪的童话世界中充分发
        挥活泼天真的本性。 沈阳热高乐园冰雪欢乐世界 沈阳热高乐园冰雪欢乐世界</string>
    <string name="design_text_view_summary_label">景点特色</string>
    <string name="design_text_view_content_label">景点介绍</string>

    <string name="design_text_view_log_time">2018-07-09</string>
    <string name="design_text_view_log_title">哈尔冰滑雪场</string>

    <string name="design_text_view_log_time_label">曾经来过，留下芳香</string>
    <string name="design_text_view_log_history_label">上一次旅行的足迹</string>
    <string name="design_log_year">2018-01-12</string>
    <string name="design_label_log">到达时间</string>
    <string name="design_label_log_leave">离开时间</string>
    <string name="design_button_refresh">重置</string>
    <string name="design_button_save">保存</string>

    <!-- main view for format -->
    <string name="format_price">元/人</string>
    <string name="format_price_null">门票免费</string>

    <!-- Titanic  -->
    <string name="titanic_show">Made By MilkDZ</string>

    <!-- for tab -->
    <string name="tab_string_array_list">基本信息,景点介绍,图片欣赏,我的足迹</string>
    <string name="log_none">你还没有填过来这里游玩的时间哦！</string>

    <!-- packages of location map -->
    <string name="package_baidu_map">com.baidu.BaiduMap</string>
    <string name="package_gaode_map">com.autonavi.minimap</string>

    <string name="package_no_activity">你还没有安装相对应的APP！</string>

    <!-- for main menu -->
    <string name="menu_list">浏览景点</string>
    <string name="menu_log">我的足迹</string>
    <string name="menu_refresh">关于作者</string>

    <!-- action no messages -->
    <string name="NONE_DISCOUNT">暂无相关优惠信息</string>
    <string name="NONE_TIME">全天开放</string>
    <string name="NONE_ATTENTION">暂无相关注意事项</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <!-- ======================= search view define start ========================== -->
    <!-- search tag -->
    <string name="history_search_tag">搜索历史</string>
    <string name="hot_search_tag">热门搜索</string>

    <!-- search hot tag -->
    <string name="hot_tag_ten">北京;新疆;水上乐园;漂流;山;重庆;天津;沙滩</string>
    <!-- ======================= search view define end ========================== -->

    <!-- ======================= locate  start ========================== -->

    <string-array name="spinner_locate_province">
        <item>全国</item>
        <item>北京市</item>
        <item>天津市</item>
        <item>上海市</item>
        <item>重庆市</item>
        <item>河北省</item>
        <item>山西省</item>
        <item>辽宁省</item>
        <item>吉林省</item>
        <item>黑龙江省</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>安徽省</item>
        <item>福建省</item>
        <item>江西省</item>
        <item>山东省</item>
        <item>河南省</item>
        <item>湖北省</item>
        <item>湖南省</item>
        <item>广东省</item>
        <item>海南省</item>
        <item>四川省</item>
        <item>贵州省</item>
        <item>云南省</item>
        <item>陕西省</item>
        <item>甘肃省</item>
        <item>青海省</item>
        <item>台湾省</item>
        <item>内蒙古自治区</item>
        <item>西藏自治区</item>
        <item>广西壮族自治区</item>
        <item>宁夏回族自治区</item>
        <item>新疆维吾尔自治区</item>
        <item>香港特别行政区</item>
        <item>澳门特别行政区</item>
    </string-array>

    <string-array name="spinner_locate_province_keys">
        <item></item>
        <item>北京</item>
        <item>天津</item>
        <item>上海</item>
        <item>重庆</item>
        <item>河北</item>
        <item>山西</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>江苏</item>
        <item>浙江</item>
        <item>安徽</item>
        <item>福建</item>
        <item>江西</item>
        <item>山东</item>
        <item>河南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>广东</item>
        <item>海南</item>
        <item>四川</item>
        <item>贵州</item>
        <item>云南</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>青海</item>
        <item>台湾</item>
        <item>内蒙古</item>
        <item>西藏</item>
        <item>广西</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
    </string-array>
    <!-- ======================= locate  end   ========================== -->

    <!-- for log -->
    <string name="bt_yes">确定</string>
    <string name="bt_no">取消</string>

</resources>


